# MNI_7T_DICOM_to_BIDS

./: COMPILATION.md  Dockerfile  MPN7T.def  README.md  assets  compile.Dockerfile  mni7t_dcm2bids.spec  mni_7t_dicom_to_bids.spec  pyproject.toml  run.Dockerfile
.github/actions/install-project/: action.yml
.github/workflows/: checks.yml
src/mni_7t_dicom_to_bids/: args.py  convert_dicom_series.py  dataclass.py  dataset_files.py  group_dicom_series.py  map_bids_dicom_series.py  map_dicom_series.py  patch_files.py  pipeline.py  post_process.py  print.py  run_dicom_to_niix.py  sort_bids_acquisitions.py  sort_dicom_series.py  variables.py
src/mni_7t_dicom_to_bids/assets/: README  dataset_description.json  task-template_bold.json
src/mni_7t_dicom_to_bids/scripts/: run_mni_7t_dicom_to_bids.py
src/mpn_dicom_to_bids/: dataclass.py  dataset_files.py  pipeline.py  post_process.py  run_dicom_to_niix.py  sort_bids_acquisitions.py  sort_dicom_series.py  variables.py
src/mpn_dicom_to_bids/assets/: .bidsignore  participants.json
src/mpn_dicom_to_bids/scripts/: mpn_dicom_to_bids.py
